[FIX] overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,6 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 .scrollArea {
@@ -28,7 +27,8 @@ body,
   left: 0;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .container {
