--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -5,8 +5,8 @@
   
   header {
     position: absolute;
-    left:-30px;
-    z-index: 1;
+    left: -20px;
+    z-index: 99999999;
     width: 100%;
     padding: 60px;
     background: linear-gradient(to right, rgb(255, 239, 186), rgb(255, 255, 255));
